# docs/swagger.json
@@ -16,7 +16,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "subscriptions"
+                    "subscriptions CRUDL"
                 ],
                 "summary": "Список подписок",
                 "parameters": [
@@ -59,7 +59,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "subscriptions"
+                    "subscriptions CRUDL"
                 ],
                 "summary": "Создать подписку",
                 "parameters": [
@@ -95,6 +95,66 @@
                 }
             }
         },
+        "/subscriptions/cost": {
+            "get": {
+                "description": "Считает суммарную стоимость подписок за указанный период",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "subscriptions COST"
+                ],
+                "summary": "Стоимость подписок за период",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Начало (YYYY-MM-DD)",
+                        "name": "period_start",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Конец (YYYY-MM-DD)",
+                        "name": "period_end",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Фильтр по ID пользователя",
+                        "name": "user_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Фильтр по названию",
+                        "name": "name",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.CostResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/subscriptions/{id}": {
             "get": {
                 "description": "Возвращает подписку по её идентификатору",
@@ -102,7 +162,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "subscriptions"
+                    "subscriptions CRUDL"
                 ],
                 "summary": "Получить подписку по ID",
                 "parameters": [
@@ -150,7 +210,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "subscriptions"
+                    "subscriptions CRUDL"
                 ],
                 "summary": "Обновить подписку",
                 "parameters": [
@@ -204,7 +264,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "subscriptions"
+                    "subscriptions CRUDL"
                 ],
                 "summary": "Удалить подписку",
                 "parameters": [
@@ -237,6 +297,40 @@
         }
     },
     "definitions": {
+        "models.CostDetail": {
+            "type": "object",
+            "properties": {
+                "active_months": {
+                    "type": "integer"
+                },
+                "cost": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.CostResponse": {
+            "type": "object",
+            "properties": {
+                "details": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.CostDetail"
+                    }
+                },
+                "total_cost": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.CreateSubscriptionRequest": {
             "type": "object",
             "properties": {
